--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       crossorigin="anonymous"
     ></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fashion Website</title>
+    <title>Cinnamon Fashion</title>
     <link
       href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700,800,900&display=swap"
       rel="stylesheet"
